<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Locomate</string>
    <string name="action_settings">Settings</string>
    
    <string name="source_text">Enter Source</string>
    <string name="destination_text">Enter Destination</string>
    
    
    <string name="offer_ride">Offer Ride</string>
    <string name="request_ride">Request Ride</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    
    <string name="subtitle_frequency">Frequency</string>
    <string name="question_frequency">How offen do you offer this ride?</string>
    <string name="regular">Regular</string>
    <string name="onetime">Onetime</string>
    <string name="subtitle_route">Route</string>
    <string name="subtitle_schedule">Schedule</string>
    <string name="subtitle_otherdetails">Other Details</string>
    <string name="subtitle_vehicledetails">Vehicle Details</string>
    <string name="subtitle_terms">Terms</string>
    
    <string name="select_days">Select Days</string>
    <string name="date">Date and Time:</string>
    <string name="datehint">DD/MM/YYYY</string>
    <string name="time">Time :</string>
    <string name="timehint">00:00</string>
    <string name="amount_label">Amount :</string>
    <string name="amount_hint">Enter Amount in Rupees</string>
    
    <string name="available_seats_label">Number of Seats Availbale :</string>
    <string name="available_seats_hint">Available Seats</string>
    
    <string name="pickup_label">Convenient PickUp Places:</string>
    <string name="pickup_label_hint">Convenient PickUp Places</string>
    
    <string name="car_number_label">Car Number :</string>
    <string name="car_number_hint">Enter Car Number</string>
    
    <string name="car_model_label">Car Model :</string>
    <string name="car_model_hint">Enter Car Model</string>
    
    <string name="Terms_label">Terms for Carpoolers :</string>
    <string name="Terms_label_hint">State any other terms for Carpoolers</string>
    
    <string name="terms_conditions">I agree to the Terms and Conditions</string>
    
    <string name="monday">Monday</string>
	<string name="tuesday">Tuesday</string>
	<string name="wednesday">Wednesday</string>
	<string name="thursday">Thursday</string>
	<string name="friday">Friday</string>
	<string name="saturday">Saturday</string>
	<string name="sunday">Sunday</string>
    

    <string name="GPSAlertDialogTitle">GPS setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name='slider_list_img_desc'>Slider pane list item icon</string>
    
    <string name="signin_username_hint"> Username </string>
    <string name="signin_password_hint"> Password </string>
    <string name="signin_button_text"> Sign In </string>
    <string name="signup_label"> New to Locomate?</string>
    <string name="signup_button_text">Create New Account</string>
    
    <string name="enter_message"> Enter Name </string>
    <string name="chat_send"> Send </string>
    
    

</resources>
